Minor fixes for margins, paddings, heights, gaps and border-radius.

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -5,7 +5,8 @@
 	flex-direction: column;
 	margin-top: 2.8rem;
 	max-width: 92vw;
-	border-radius: 1rem;
+	max-height: 61rem;
+	border-radius: 0.9rem;
 	overflow: hidden;
 
 	@include b.respond(medium) {
@@ -18,8 +19,8 @@
 	&__image-container {
 		@include b.respond(medium) {
 			flex-basis: 50%;
-			border-top-left-radius: 1rem;
-			border-bottom-left-radius: 1rem;
+			border-top-left-radius: 0.9rem;
+			border-bottom-left-radius: 0.9rem;
 			overflow: hidden;
 		}
 	}
@@ -38,6 +39,8 @@
 
 		@include b.respond(medium) {
 			flex-basis: 50%;
+			gap: 1rem;
+			padding: 3.4rem 2.45rem;
 		}
 	}
 
@@ -46,6 +49,10 @@
 		font-weight: 500;
 		letter-spacing: 0.3rem;
 		text-transform: uppercase;
+
+		@include b.respond(medium) {
+			line-height: 0.8;
+		}
 	}
 
 	&__title {
@@ -54,6 +61,10 @@
 		font-family: b.$font-accent;
 		font-weight: 700;
 		line-height: 1;
+
+		@include b.respond(medium) {
+			margin-bottom: 0.6rem;
+		}
 	}
 
 	&__description {
@@ -67,6 +78,10 @@
 		gap: 1.6rem;
 
 		margin: 1rem 0 0.7rem;
+
+		@include b.respond(medium) {
+			margin: 0 0 1.2rem;
+		}
 	}
 
 	&__price {
@@ -87,13 +102,18 @@
 		justify-content: center;
 		align-items: center;
 		gap: 0.3rem;
-		padding: 1em 1.2em;
+
+		padding: 1.5rem 1.6rem;
 		width: 100%;
 		background-color: b.$dark-cyan;
 		color: b.$white;
 		font-weight: 600;
-		border-radius: 1rem;
+		border-radius: 0.9rem;
 		transition: background-color 0.2s;
+
+		@include b.respond(medium) {
+			padding: 0.9rem;
+		}
 
 		&:hover,
 		&:focus {
